# JolTax

./: .gitignore  GEMINI.md  LICENSE  README.md  USAGE.md  pyproject.toml
conda/: meta.yaml
joltax/: __init__.py  constants.py  exceptions.py  joltree.py
ncbi_cache/: ranks.npy
taxatree/: __init__.py  tree.py
tests/: test_integrity.py  test_tree.py
tests/data/: names.dmp  nodes.dmp
