[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "joltax"
version = "0.2.0"
authors = [
  { name="Daniel Svensson", email="daniel.svensson@umu.se" },
]
description = "JolTax is a high-performance, vectorized taxonomy library for Python."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20.0",
    "polars>=0.20.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.urls]
"Homepage" = "https://github.com/SweBiTS/JolTax"
"Bug Tracker" = "https://github.com/SweBiTS/JolTax/issues"
"Source Code" = "https://github.com/SweBiTS/JolTax"

[tool.setuptools]
packages = ["joltax"]
